# college-appointment-task

./: .gitignore  API's.md  README.md  app.py  hello.py  pyproject.toml
scripts/: lint_checker_pylint.sh
src/: __init__.py  config.py
src/api/: login-signin.py
src/api/signup-login/: __init__.py
src/api/signup_login/: login_signin.py
src/models/: professor.py  student.py
src/utils/: assertions.py  authToken.py  decorators.py  exception.py  password_handle.py  responses.py
