[project]
name = "college-appointments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "jwt>=1.3.1",
    "motor>=3.6.0",
    "passlib>=1.7.4",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
